--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
-  "name": "frontend-v3",
+  "name": "@balancer/frontend-v3",
   "version": "0.1.0",
+  "license": "MIT",
+  "repository": "balancer/frontend-v3",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "stylelint": "stylelint '**/*.css'",
+    "stylelint:fix": "npm run stylelint -- --fix",
+    "prettier": "prettier --check '**/*.*(md|json|yaml|ts|js|tsx)' --loglevel warn",
+    "prettier:fix": "pnpm run prettier --write",
+    "typecheck": "tsc --project tsconfig.json --noEmit",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@types/node": "20.3.2",
@@ -24,6 +33,11 @@
     "@typescript-eslint/parser": "^5.60.1",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.8"
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.3",
+    "prettier": "^2.8.8",
+    "stylelint": "^15.9.0",
+    "stylelint-config-standard": "^33.0.0",
+    "stylelint-prettier": "^3.0.0"
   }
 }
