--- a/package.json
+++ b/package.json
@@ -19,16 +19,22 @@
     "generate:graphql": "graphql-codegen"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.3.2",
     "@types/react-dom": "18.2.6",
+    "class-variance-authority": "^0.6.1",
+    "clsx": "^1.2.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "graphql": "^16.7.1",
     "graphql-request": "^6.1.0",
     "graphql-tag": "^2.12.6",
+    "lucide-react": "^0.257.0",
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind-merge": "^1.13.2",
+    "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.6"
   },
   "devDependencies": {
