chore: Add lint all command

--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
+    "lint:all": "pnpm run lint && pnpm run stylelint && pnpm run prettier && pnpm run typecheck",
     "stylelint": "stylelint '**/*.css'",
-    "stylelint:fix": "npm run stylelint -- --fix",
+    "stylelint:fix": "pnpm run stylelint -- --fix",
     "prettier": "prettier --check '**/*.*(md|json|yaml|ts|js|tsx)' --loglevel warn",
     "prettier:fix": "pnpm run prettier --write",
     "typecheck": "tsc --project tsconfig.json --noEmit",
