chore: Add theme toggle

--- a/components.json
+++ b/components.json
@@ -10,6 +10,6 @@
   },
   "aliases": {
     "components": "@/components/_base",
-    "utils": "@/lib/utils"
+    "utils": "@/lib/utils/styles"
   }
 }
