--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toggle": "^1.0.3",
+    "@rainbow-me/rainbowkit": "^1.0.4",
     "@types/node": "20.3.2",
     "@types/react-dom": "18.2.6",
     "@uidotdev/usehooks": "^2.0.1",
@@ -32,6 +33,7 @@
     "graphql": "^16.7.1",
     "graphql-request": "^6.1.0",
     "graphql-tag": "^2.12.6",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.257.0",
     "next": "13.4.7",
     "next-themes": "^0.2.1",
@@ -40,7 +42,9 @@
     "react-icons": "^4.10.1",
     "tailwind-merge": "^1.13.2",
     "tailwindcss-animate": "^1.0.6",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "viem": "^1.2.9",
+    "wagmi": "^1.3.7"
   },
   "devDependencies": {
     "@graphql-codegen/add": "^5.0.0",
@@ -52,6 +56,7 @@
     "@graphql-codegen/typescript-graphql-request": "^5.0.0",
     "@graphql-codegen/typescript-operations": "^4.0.1",
     "@graphql-codegen/typescript-resolvers": "^4.0.1",
+    "@types/lodash": "^4.14.195",
     "@types/react": "18.2.14",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
