--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "generate:graphql": "graphql-codegen"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
     "@hookform/resolvers": "^3.1.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.4",
@@ -60,7 +61,7 @@
     "graphql-tag": "^2.12.6",
     "lodash": "^4.17.21",
     "lucide-react": "^0.257.0",
-    "next": "13.4.7",
+    "next": "13.4.9",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-day-picker": "^8.8.0",
