feat: Add Apollo provider and use to fetch pools

--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "generate:graphql": "graphql-codegen"
   },
   "dependencies": {
+    "@apollo/client": "3.8.0-rc.1",
+    "@apollo/experimental-nextjs-app-support": "0.0.0-commit-473354a",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@headlessui/react": "^1.7.15",
     "@hookform/resolvers": "^3.1.1",
     "@radix-ui/react-accordion": "^1.1.2",
