Revert "chore: Change relative path for action"
This reverts commit 374999d9cf1d2a6d59f715845bcf82be89095e34.

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: ./actions/setup
+      - uses: ./.github/actions/setup
       - name: Run build
         run: pnpm run build
 
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: ./actions/setup
+      - uses: ./.github/actions/setup
       - name: Run lint
         run: pnpm run lint
       - name: Run prettier
@@ -28,7 +28,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: ./actions/setup
+      - uses: ./.github/actions/setup
       - name: Run typecheck
         run: pnpm run typecheck
       - name: Run tests
