--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -8,7 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: ./.github/actions/setup
+      - name: Setup
+        uses: ./.github/actions/setup
       - name: Run build
         run: pnpm run build
 
@@ -16,7 +17,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: ./.github/actions/setup
+      - name: Setup
+        uses: ./.github/actions/setup
       - name: Run lint
         run: pnpm run lint
       - name: Run prettier
@@ -24,12 +26,13 @@ jobs:
       - name: Run stylelint
         run: pnpm run stylelint
 
-  Test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: ./.github/actions/setup
-      - name: Run typecheck
-        run: pnpm run typecheck
-      - name: Run tests
-        run: pnpm run test
+  # Test:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Setup
+  #       uses: ./.github/actions/setup
+  #     - name: Run typecheck
+  #       run: pnpm run typecheck
+  #     - name: Run tests
+  #       run: pnpm run test
