--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@radix-ui/react-toast": "^1.1.4",
     "@radix-ui/react-toggle": "^1.0.3",
     "@rainbow-me/rainbowkit": "^1.0.6",
+    "@tanstack/react-table": "^8.9.3",
     "@types/node": "20.3.2",
     "@types/react-dom": "18.2.6",
     "@uidotdev/usehooks": "^2.0.1",
@@ -67,6 +68,7 @@
     "lucide-react": "^0.257.0",
     "next": "13.4.9",
     "next-themes": "^0.2.1",
+    "numeral": "^2.0.6",
     "react": "18.2.0",
     "react-day-picker": "^8.8.0",
     "react-dom": "18.2.0",
@@ -90,6 +92,7 @@
     "@graphql-codegen/typescript-operations": "^4.0.1",
     "@graphql-codegen/typescript-resolvers": "^4.0.1",
     "@types/lodash": "^4.14.195",
+    "@types/numeral": "^2.0.2",
     "@types/react": "18.2.14",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
