--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "generate:graphql": "graphql-codegen"
   },
   "dependencies": {
-    "@apollo/client": "^3.7.17",
+    "@apollo/client": "3.8.0-rc.1",
+    "@apollo/experimental-nextjs-app-support": "^0.4.1",
     "@headlessui/react": "^1.7.15",
     "@hookform/resolvers": "^3.1.1",
     "@radix-ui/react-accordion": "^1.1.2",
