Add vitest setup with first component test

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,8 +21,10 @@
     ],
     "paths": {
       "@/*": ["./*"]
-    }
+    },
+    "types": ["vitest/globals"]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "files": ["node_modules/jest-extended/types/index.d.ts"]
 }
