--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "gen:graphql": "DOTENV_CONFIG_PATH=./.env.local graphql-codegen -r dotenv/config",
     "gen:theme-typings": "chakra-cli tokens ./lib/services/chakra/theme.ts",
     "postinstall": "npm run gen:theme-typings",
-    "test:unit": "vitest"
+    "test": "pnpm test:unit & pnpm run test:integration",
+    "test:unit": "vitest",
+    "test:unit:coverage": "vitest --coverage",
+    "test:unit:silent:coverage": "SILENT_TESTS=true vitest --coverage",
+    "test:integration": "vitest -c ./vitest.config.integration.ts"
   },
   "dependencies": {
     "@apollo/client": "3.8.0-rc.1",
@@ -50,7 +54,7 @@
     "react-icons": "^4.10.1",
     "typescript": "5.1.6",
     "viem": "^1.2.9",
-    "wagmi": "^1.3.7",
+    "wagmi": "^1.3.10",
     "zod": "^3.21.4"
   },
   "devDependencies": {
@@ -62,22 +66,28 @@
     "@graphql-codegen/typescript-document-nodes": "^4.0.1",
     "@graphql-codegen/typescript-msw": "^1.1.6",
     "@graphql-typed-document-node/core": "^3.2.0",
+    "@tanstack/react-query": "^4.29.19",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/react-hooks": "^8.0.1",
     "@types/lodash": "^4.14.195",
     "@types/numeral": "^2.0.2",
     "@types/react": "18.2.14",
+    "@types/testing-library__jest-dom": "^5.14.9",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
+    "@viem/anvil": "^0.0.6",
     "@vitejs/plugin-react": "^4.0.4",
+    "@vitest/coverage-v8": "^0.34.1",
+    "@vitest/ui": "^0.34.1",
+    "@wagmi/core": "^1.3.9",
     "autoprefixer": "^10.4.14",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "happy-dom": "^10.5.2",
     "husky": "^8.0.3",
-    "jest-extended": "^4.0.0",
     "lint-staged": "^13.2.3",
+    "lokijs": "^1.5.12",
     "msw": "^1.2.3",
     "prettier": "^2.8.8",
     "stylelint": "^15.9.0",
@@ -85,5 +95,17 @@
     "stylelint-prettier": "^3.0.0",
     "vitest": "^0.34.1",
     "vitest-mock-extended": "^1.1.4"
+  },
+  "pnpm": {
+    "overrides": {
+      "@tanstack/react-query": "^4.29.19"
+    },
+    "peerDependencyRules": {
+      "allowedVersions": {
+        "@types/react": "^18.0.0",
+        "react": "^18.0.0",
+        "react-dom": "^18.0.0"
+      }
+    }
   }
 }
