--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "@vitest/ui": "^0.34.1",
     "@wagmi/core": "^1.3.9",
     "autoprefixer": "^10.4.14",
+    "cross-fetch": "^4.0.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "happy-dom": "^10.5.2",
