Add unit tests to GHA

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -26,13 +26,22 @@ jobs:
       - name: Run stylelint
         run: pnpm run stylelint
 
-  # Test:
+  Unit-Test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Setup
+        uses: ./.github/actions/setup
+      - name: Run typecheck
+        run: pnpm typecheck
+      - name: Run unit tests
+        run: pnpm test:unit
+
+  # Integration-Test:
   #   runs-on: ubuntu-latest
   #   steps:
   #     - uses: actions/checkout@v3
   #     - name: Setup
   #       uses: ./.github/actions/setup
-  #     - name: Run typecheck
-  #       run: pnpm run typecheck
-  #     - name: Run tests
-  #       run: pnpm run test
+  #     - name: Run integration tests
+  #       run: pnpm test:integration
