--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -20,11 +20,11 @@ jobs:
       - name: Setup
         uses: ./.github/actions/setup
       - name: Run lint
-        run: pnpm run lint
+        run: pnpm lint
       - name: Run prettier
-        run: pnpm run prettier
+        run: pnpm prettier
       - name: Run stylelint
-        run: pnpm run stylelint
+        run: pnpm stylelint
 
   Unit-Test:
     runs-on: ubuntu-latest
@@ -37,11 +37,13 @@ jobs:
       - name: Run unit tests
         run: pnpm test:unit
 
-  # Integration-Test:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: Setup
-  #       uses: ./.github/actions/setup
-  #     - name: Run integration tests
-  #       run: pnpm test:integration
+  Integration-Test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Setup
+        uses: ./.github/actions/setup
+      - name: Set up foundry (includes anvil)
+        uses: foundry-rs/foundry-toolchain@v1
+      - name: Run integration tests
+        run: pnpm test:integration
