--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -7,6 +7,8 @@ runs:
       uses: pnpm/action-setup@v2
       with:
         version: latest
+        node_version: 18
+        cache: pnpm
     - name: Install Node.js
       uses: actions/setup-node@v3
     - name: Install dependencies
