Extract infura and alchemy api-keys

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 NEXT_PUBLIC_APP_ENV=dev
 NEXT_PUBLIC_BALANCER_API_URL=https://api-v3.balancer.fi/graphql
+NEXT_ALCHEMY_API_KEY=VBeQgTCRqqPtuuEPsFzRdwKXzDyN6aFh
+NEXT_INFURA_API_KEY=daaa68ec242643719749dd1caba2fc66
 
 
 # ***************
