--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@types/react": "18.2.14",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
+    "@wagmi/cli": "^1.5.0",
     "autoprefixer": "^10.4.14",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
