--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "graphql-tag": "^2.12.6",
     "lodash": "^4.17.21",
     "next": "13.4.9",
+    "next-intl": "^2.20.0",
     "numeral": "^2.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
