--- a/package.json
+++ b/package.json
@@ -45,11 +45,13 @@
     "lodash": "^4.17.21",
     "next": "13.5.2",
     "next-intl": "^2.20.0",
+    "next-query-params": "^4.2.3",
     "numeral": "^2.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "typescript": "5.1.6",
+    "use-query-params": "^2.2.1",
     "viem": "^1.2.9",
     "wagmi": "^1.3.7",
     "zod": "^3.21.4"
