--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "numeral": "^2.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-icons": "^4.10.1",
     "typescript": "5.1.6",
     "use-query-params": "^2.2.1",
