--- a/.env.test.example
+++ b/.env.test.example
@@ -1,7 +1,7 @@
 
-# ***************
-# Testing setup #
-# ***************
+#
+# Copy the content of this file to .env.test to customize test behaviour
+#
 
 NEXT_PUBLIC_APP_ENV=dev
 NEXT_PUBLIC_BALANCER_API_URL=https://api-v3.balancer.fi/graphql
