Feat/vitest setup (#10)
* Add vitest setup with first component test

* Add integration tests for onchain calls

* Add cross-fetch dependency

* Add testing docs

* Add unit tests to GHA

* Add integration tests to GHA

* Add pnpm cache to setup action

* Update dependencies and add apollo test env

* Add todos and credits to testing docs

* Silence react devtools

* Add default value for balancer API

* Add .env example

* Rename VITE_ANVIL_FORK_RPC_URL env

* Extract infura and alchemy api-keys

* Limit fake tokens to a subset

* Add test for pool detail

* Improve test render wrapper

* Add Global providers to custom test renderers

* Extract msw types

* Remove component render utils and tests

* Undo usetokenBalances provider

* Add example for super hook over onchain hook

* Merge token builders

* Refactor builders and mocks

* Remove vi.mock test example

* Remove unused const

* Rename test function

* Remove global wagmi useAccount mock (we dont need it after removing component test)

* Rename renderHook helper and merge waitForLoadedUseQuery into it

* Extract test setup to .env.test

* Refactor .env examples

* Add mock to name to default exports

* Add comments to getQueryName

* Rename helper function

--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -9,6 +9,9 @@ runs:
         version: latest
     - name: Install Node.js
       uses: actions/setup-node@v3
+      with:
+        cache: pnpm
+        node-version: 18
     - name: Install dependencies
       shell: bash
       run: pnpm i --frozen-lockfile
