--- a/package.json
+++ b/package.json
@@ -37,10 +37,14 @@
     "@emotion/styled": "^11.11.0",
     "@rainbow-me/rainbowkit": "^1.1.1",
     "@tanstack/react-table": "^8.9.3",
+    "@types/echarts": "^4.9.19",
     "@types/node": "20.3.2",
     "@types/react-dom": "18.2.6",
     "@uidotdev/usehooks": "^2.0.1",
+    "date-fns": "^2.30.0",
     "deepmerge": "^4.3.1",
+    "echarts": "^5.4.3",
+    "echarts-for-react": "^3.0.2",
     "eslint": "8.43.0",
     "eslint-config-next": "13.5.2",
     "framer-motion": "^10.13.0",
