--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@rainbow-me/rainbowkit": "^1.1.1",
+    "@tanstack/react-query": "^4.29.19",
     "@tanstack/react-table": "^8.9.3",
     "@types/node": "20.3.2",
     "@types/react-dom": "18.2.6",
@@ -55,12 +56,12 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.10.1",
+    "rooks": "^7.14.1",
     "typescript": "5.1.6",
     "use-query-params": "^2.2.1",
     "viem": "^1.2.9",
     "wagmi": "^1.4.3",
-    "zod": "^3.21.4",
-    "@tanstack/react-query": "^4.29.19"
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@chakra-ui/cli": "^2.4.1",
