--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
   "dependencies": {
     "@apollo/client": "3.8.0-rc.1",
     "@apollo/experimental-nextjs-app-support": "^0.4.1",
+    "@chakra-ui/hooks": "^2.2.1",
     "@chakra-ui/icons": "^2.1.0",
     "@chakra-ui/next-js": "^2.1.5",
     "@chakra-ui/react": "^2.8.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@rainbow-me/rainbowkit": "^1.1.1",
+    "@tanstack/react-query": "^4.29.19",
     "@tanstack/react-table": "^8.9.3",
     "@types/node": "20.3.2",
     "@types/react-dom": "18.2.6",
@@ -59,8 +61,7 @@
     "use-query-params": "^2.2.1",
     "viem": "^1.2.9",
     "wagmi": "^1.4.3",
-    "zod": "^3.21.4",
-    "@tanstack/react-query": "^4.29.19"
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@chakra-ui/cli": "^2.4.1",
