chore: Fetch user balances on all supported chains

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 NEXT_PUBLIC_APP_ENV=dev
-NEXT_PUBLIC_BALANCER_API_URL=https://api-v3.balancer.fi/graphql
+NEXT_PUBLIC_BALANCER_API_URL=https://test-api-v3.balancer.fi/graphql
 NEXT_PUBLIC_ALCHEMY_API_KEY=eiiBKfCaWWoEUUlT_tszBlSDiFwC6rHp
 NEXT_PUBLIC_INFURA_API_KEY=77ab387b59ac47ee8acf46916b4d7c23
 NEXT_PUBLIC_WALLET_CONNECT_ID=1b6b722470b504a53cf011e1e629a9eb
