--- a/.env.test.example
+++ b/.env.test.example
@@ -4,7 +4,7 @@
 #
 
 NEXT_PUBLIC_APP_ENV=dev
-NEXT_PUBLIC_BALANCER_API_URL=https://api-v3.balancer.fi/graphql
+NEXT_PUBLIC_BALANCER_API_URL=https://test-api-v3.balancer.fi/graphql
 
 # Set true to run integration tests with wagmi production setup
 VITE_USE_PRODUCTION_WAGMI=false
