WIP: Feat/join example (#67)
* Add useManagedSendTransaction

* Refactor integration helper

* Create JoinPayload class

* Simplify api

* Refactor type names

* Refactor executable type

* Use b-sdk join2 branch

* Refactor sdk-helpers

* Refactor sdk-utils

* Refactor tests

* Move join files to lib folder

* Add setupToken method

* Add test for Single Asset Join

* Add exception to init weth in example

* Refactor JoinPayload for single asset

* Add setupToken

* Refactor setupToken

* Refactor default sdk test utils

* Show wstETH balance in UI

* Extend bigint prototype to allow stringify

* Skip test until parallelization

* Increase timeout

* Refactor hook file

* Increase max line length

* Rename payload variables

* Add erc20 hook

* Rearrange debug pages

* Extract transaction cache hooks

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@apollo/client": "3.8.0-rc.1",
     "@apollo/experimental-nextjs-app-support": "^0.4.1",
+    "@balancer/sdk": "github:balancer/b-sdk#join2",
     "@chakra-ui/hooks": "^2.2.1",
     "@chakra-ui/icons": "^2.1.0",
     "@chakra-ui/next-js": "^2.1.5",
@@ -64,7 +65,7 @@
     "typescript": "5.1.6",
     "use-query-params": "^2.2.1",
     "viem": "^1.2.9",
-    "wagmi": "^1.4.3",
+    "wagmi": "^1.4.4",
     "zod": "^3.21.4"
   },
   "devDependencies": {
