--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
   },
   "dependencies": {
     "@apollo/client": "3.8.0-rc.1",
-    "@apollo/experimental-nextjs-app-support": "^0.4.1",
     "@balancer/sdk": "github:balancer/b-sdk#join2",
     "@chakra-ui/hooks": "^2.2.1",
     "@chakra-ui/icons": "^2.1.0",
@@ -49,13 +48,13 @@
     "echarts": "^5.4.3",
     "echarts-for-react": "^3.0.2",
     "eslint": "8.43.0",
-    "eslint-config-next": "13.5.2",
+    "eslint-config-next": "14.0.1",
     "framer-motion": "^10.13.0",
     "graphql": "^16.7.1",
     "graphql-request": "^6.1.0",
     "graphql-tag": "^2.12.6",
     "lodash": "^4.17.21",
-    "next": "13.5.2",
+    "next": "14.0.1",
     "next-query-params": "^4.2.3",
     "numeral": "^2.0.6",
     "react": "18.2.0",
@@ -69,6 +68,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@apollo/experimental-nextjs-app-support": "^0.5.0",
     "@chakra-ui/cli": "^2.4.1",
     "@chakra-ui/styled-system": "^2.9.1",
     "@graphql-codegen/cli": "^4.0.1",
@@ -82,7 +82,7 @@
     "@testing-library/react-hooks": "^8.0.1",
     "@types/lodash": "^4.14.195",
     "@types/numeral": "^2.0.2",
-    "@types/react": "18.2.14",
+    "@types/react": "18.2.34",
     "@types/testing-library__jest-dom": "^5.14.9",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
@@ -117,5 +117,9 @@
         "react-dom": "^18.0.0"
       }
     }
+  },
+  "engineStrict": true,
+  "engines": {
+    "node": ">=18.x"
   }
 }
