--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@chakra-ui/react": "^2.8.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@nikolovlazar/chakra-ui-prose": "^1.2.1",
     "@rainbow-me/rainbowkit": "^1.1.1",
     "@tanstack/react-query": "^4.29.19",
     "@tanstack/react-table": "^8.9.3",
