--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/node": "20.3.2",
     "@types/react-dom": "18.2.6",
     "@uidotdev/usehooks": "^2.0.1",
+    "bignumber.js": "^9.1.2",
     "date-fns": "^2.30.0",
     "deepmerge": "^4.3.1",
     "echarts": "^5.4.3",
