--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "lodash": "^4.17.21",
     "next": "14.0.1",
     "next-query-params": "^4.2.3",
+    "nextjs-toploader": "^1.6.4",
     "numeral": "^2.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
