--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "graphql-tag": "^2.12.6",
     "lodash": "^4.17.21",
     "next": "14.0.1",
-    "next-query-params": "^4.2.3",
+    "next-usequerystate": "^1.9.2",
     "nextjs-toploader": "^1.6.4",
     "numeral": "^2.0.6",
     "react": "18.2.0",
@@ -63,7 +63,6 @@
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.10.1",
     "typescript": "5.1.6",
-    "use-query-params": "^2.2.1",
     "viem": "^1.18.1",
     "wagmi": "^1.4.5",
     "zod": "^3.21.4"
