--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/node": "20.3.2",
     "@types/react-dom": "18.2.6",
     "@uidotdev/usehooks": "^2.0.1",
+    "bignumber.js": "^9.1.2",
     "date-fns": "^2.30.0",
     "deepmerge": "^4.3.1",
     "echarts": "^5.4.3",
@@ -66,6 +67,7 @@
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.10.1",
     "typescript": "5.1.6",
+    "usehooks-ts": "^2.9.1",
     "viem": "^1.18.1",
     "wagmi": "^1.4.5",
     "zod": "^3.21.4"
