Set back cloudflare rpc as default for integration tests

--- a/.env.test
+++ b/.env.test
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_APP_ENV=dev
 NEXT_PUBLIC_BALANCER_API_URL=https://api-v3.balancer.fi/graphql
+# VITE_ANVIL_FORK_RPC_URL=https://eth-mainnet.g.alchemy.com/v2/ZJ0EBceSO_eSLWUJ4wERXwR6VXhNoVAX
