--- a/.env.test.example
+++ b/.env.test.example
@@ -11,7 +11,7 @@ VITE_USE_PRODUCTION_WAGMI=false
 
 # Use this var to debug tests with real networks instead of the anvil fork.
 # Example:
-# VITE_TEST_RPC='https://eth.llamarpc.com'
+# VITE_TEST_RPC='https://cloudflare-eth.com'
 VITE_TEST_RPC=http://127.0.0.1:8555
 
 # Set your own alchemy key
