--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/node": "20.3.2",
     "@types/react-dom": "18.2.6",
     "@uidotdev/usehooks": "^2.0.1",
+    "bignumber.js": "^9.1.2",
     "date-fns": "^2.30.0",
     "deepmerge": "^4.3.1",
     "echarts": "^5.4.3",
@@ -56,6 +57,7 @@
     "graphql": "^16.7.1",
     "graphql-request": "^6.1.0",
     "graphql-tag": "^2.12.6",
+    "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "next": "14.0.1",
     "next-usequerystate": "^1.9.2",
@@ -83,6 +85,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/react-hooks": "^8.0.1",
+    "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.14.195",
     "@types/numeral": "^2.0.2",
     "@types/react": "18.2.34",
