--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@apollo/experimental-nextjs-app-support": "^0.5.1",
     "@chakra-ui/cli": "^2.4.1",
     "@chakra-ui/styled-system": "^2.9.1",
+    "@ethersproject/constants": "^5.7.0",
     "@graphql-codegen/cli": "^5.0.0",
     "@graphql-codegen/client-preset": "^4.1.0",
     "@graphql-codegen/schema-ast": "^4.0.0",
@@ -107,6 +108,7 @@
     "lokijs": "^1.5.12",
     "msw": "^1.2.3",
     "prettier": "^2.8.8",
+    "react-jazzicon": "^1.0.4",
     "stylelint": "^15.9.0",
     "stylelint-config-standard": "^33.0.0",
     "stylelint-prettier": "^3.0.0",
