--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.47.0",
+    "react-hotkeys-hook": "^4.4.1",
     "react-icons": "^4.10.1",
     "react-tiny-virtual-list": "^2.2.0",
     "typescript": "5.1.6",
