--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react-hook-form": "^7.47.0",
     "react-hotkeys-hook": "^4.4.1",
     "react-icons": "^4.10.1",
+    "react-jazzicon": "^1.0.4",
     "react-tiny-virtual-list": "^2.2.0",
     "typescript": "5.1.6",
     "viem": "^1.18.1",
