--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-icons": "^4.10.1",
     "react-jazzicon": "^1.0.4",
     "react-tiny-virtual-list": "^2.2.0",
+    "tinycolor2": "^1.6.0",
     "typescript": "5.1.6",
     "viem": "^1.18.1",
     "wagmi": "^1.4.5",
