--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "@types/numeral": "^2.0.2",
     "@types/react": "18.2.34",
     "@types/testing-library__jest-dom": "^5.14.9",
+    "@types/tinycolor2": "^1.4.6",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "@viem/anvil": "^0.0.6",
