UI theme updates (#110)
* Setting up new balColors and migrating styles

* Updated tokens and styling

* fix: Lint

---------

Co-authored-by: Gareth Fuller <gareth.a.f@gmail.com>

--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-icons": "^4.10.1",
     "react-jazzicon": "^1.0.4",
     "react-tiny-virtual-list": "^2.2.0",
+    "tinycolor2": "^1.6.0",
     "typescript": "5.1.6",
     "viem": "^1.18.1",
     "wagmi": "^1.4.5",
@@ -97,6 +98,7 @@
     "@types/numeral": "^2.0.2",
     "@types/react": "18.2.34",
     "@types/testing-library__jest-dom": "^5.14.9",
+    "@types/tinycolor2": "^1.4.6",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "@viem/anvil": "^0.0.6",
