--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "dependencies": {
     "@apollo/client": "3.8.0-rc.1",
-    "@balancer/sdk": "github:balancer/b-sdk#join2",
+    "@balancer/sdk": "github:balancer/b-sdk#price-impact-with-dist",
     "@chakra-ui/anatomy": "^2.2.2",
     "@chakra-ui/hooks": "^2.2.1",
     "@chakra-ui/icons": "^2.1.0",
@@ -63,7 +63,7 @@
     "graphql-tag": "^2.12.6",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
-    "next": "14.0.1",
+    "next": "14.0.3",
     "next-usequerystate": "^1.9.2",
     "nextjs-toploader": "^1.6.4",
     "numeral": "^2.0.6",
@@ -103,7 +103,7 @@
     "@typescript-eslint/parser": "^5.60.1",
     "@viem/anvil": "^0.0.6",
     "@vitejs/plugin-react": "^4.0.4",
-    "@vitest/coverage-v8": "^0.34.6",
+    "@vitest/coverage-v8": "^1.0.1",
     "@wagmi/cli": "^1.5.1",
     "autoprefixer": "^10.4.14",
     "c8": "^8.0.1",
@@ -119,7 +119,7 @@
     "stylelint": "^15.9.0",
     "stylelint-config-standard": "^33.0.0",
     "stylelint-prettier": "^3.0.0",
-    "vitest": "^0.34.6",
+    "vitest": "^1.0.1",
     "vitest-mock-extended": "^1.3.1"
   },
   "pnpm": {
