--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-tiny-virtual-list": "^2.2.0",
     "tinycolor2": "^1.6.0",
     "typescript": "5.1.6",
+    "use-debounce": "^10.0.0",
     "viem": "^1.18.1",
     "wagmi": "^1.4.5",
     "zod": "^3.21.4"
