--- a/package.json
+++ b/package.json
@@ -115,7 +115,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
     "lokijs": "^1.5.12",
-    "msw": "^2.0.8",
+    "msw": "2.0.8",
     "prettier": "^2.8.8",
     "stylelint": "^15.9.0",
     "stylelint-config-standard": "^33.0.0",
