--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "@wagmi/cli": "^1.5.1",
     "autoprefixer": "^10.4.14",
     "c8": "^8.0.1",
+    "cross-fetch": "^4.0.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "happy-dom": "^12.10.3",
