--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "graphql-tag": "^2.12.6",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
-    "next": "14.0.3",
+    "next": "14.0.4",
     "next-usequerystate": "^1.9.2",
     "nextjs-toploader": "^1.6.4",
     "numeral": "^2.0.6",
@@ -76,6 +76,7 @@
     "react-tiny-virtual-list": "^2.2.0",
     "tinycolor2": "^1.6.0",
     "typescript": "5.1.6",
+    "use-debounce": "^10.0.0",
     "viem": "^1.18.1",
     "wagmi": "^1.4.5",
     "zod": "^3.21.4"
@@ -114,12 +115,12 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
     "lokijs": "^1.5.12",
-    "msw": "^2.0.8",
+    "msw": "2.0.10",
     "prettier": "^2.8.8",
     "stylelint": "^15.9.0",
     "stylelint-config-standard": "^33.0.0",
     "stylelint-prettier": "^3.0.0",
-    "vitest": "^1.0.1",
+    "vitest": "^1.0.4",
     "vitest-mock-extended": "^1.3.1"
   },
   "pnpm": {
