--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@emotion/styled": "^11.11.0",
     "@nikolovlazar/chakra-ui-prose": "^1.2.1",
     "@rainbow-me/rainbowkit": "^1.1.1",
+    "@sentry/nextjs": "^7.86.0",
     "@tanstack/react-query": "^4.29.19",
     "@tanstack/react-table": "^8.9.3",
     "@types/echarts": "^4.9.19",
