--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "@graphql-codegen/typescript-document-nodes": "^4.0.1",
     "@graphql-codegen/typescript-msw": "^1.1.6",
     "@graphql-typed-document-node/core": "^3.2.0",
+    "@sentry/types": "^7.89.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/react-hooks": "^8.0.1",
