--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "tinycolor2": "^1.6.0",
     "typescript": "5.1.6",
     "use-debounce": "^10.0.0",
+    "usehooks-ts": "^2.9.2",
     "viem": "^1.18.1",
     "wagmi": "^1.4.5",
     "zod": "^3.21.4"
