Update GHA actions to use node > 16 and avoid warnings

--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -7,8 +7,9 @@ runs:
       uses: pnpm/action-setup@v2
       with:
         version: latest
+        node-version: 18
     - name: Install Node.js
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
         cache: pnpm
         node-version: 18
