--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "typescript": "5.1.6",
     "use-debounce": "^10.0.0",
     "usehooks-ts": "^2.9.2",
-    "viem": "^1.18.1",
+    "viem": "^1.21.4",
     "wagmi": "^1.4.5",
     "zod": "^3.21.4"
   },
@@ -125,7 +125,8 @@
   },
   "pnpm": {
     "overrides": {
-      "@tanstack/react-query": "^4.29.19"
+      "@tanstack/react-query": "^4.29.19",
+      "viem": "^1.21.4"
     },
     "peerDependencyRules": {
       "allowedVersions": {
