--- a/package.json
+++ b/package.json
@@ -125,8 +125,7 @@
   },
   "pnpm": {
     "overrides": {
-      "@tanstack/react-query": "^4.29.19",
-      "viem": "^1.21.4"
+      "@tanstack/react-query": "^4.29.19"
     },
     "peerDependencyRules": {
       "allowedVersions": {
