--- a/.env.test
+++ b/.env.test
@@ -1,3 +1,6 @@
 NEXT_PUBLIC_APP_ENV=dev
 NEXT_PUBLIC_BALANCER_API_URL=https://api-v3.balancer.fi/graphql
-# VITE_ANVIL_FORK_RPC_URL=https://eth-mainnet.g.alchemy.com/v2/ZJ0EBceSO_eSLWUJ4wERXwR6VXhNoVAX
+
+# NEXT_ETHEREUM_RPC_URL=https://eth-mainnet.g.alchemy.com/v2/<key>
+# NEXT_POLYGON_RPC_URL=https://polygon-mainnet.g.alchemy.com/v2/<key>
+# NEXT_FANTOM_RPC_URL=https://rpc.ftm.tools
