--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "react-hotkeys-hook": "^4.4.1",
     "react-icons": "^4.10.1",
     "react-jazzicon": "^1.0.4",
-    "react-tiny-virtual-list": "^2.2.0",
+    "react-virtuoso": "^4.7.1",
     "tinycolor2": "^1.6.0",
     "typescript": "5.1.6",
     "use-debounce": "^10.0.0",
