--- a/package.json
+++ b/package.json
@@ -42,14 +42,12 @@
     "@dicebear/core": "^7.0.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@heroicons/react": "^2.1.1",
     "@nikolovlazar/chakra-ui-prose": "^1.2.1",
     "@rainbow-me/rainbowkit": "^1.1.1",
     "@sentry/nextjs": "^7.86.0",
     "@tanstack/react-query": "^4.29.19",
     "@tanstack/react-table": "^8.9.3",
-    "@types/echarts": "^4.9.19",
-    "@types/node": "20.3.2",
-    "@types/react-dom": "18.2.6",
     "@vercel/speed-insights": "^1.0.1",
     "bignumber.js": "^9.1.2",
     "date-fns": "^2.30.0",
@@ -76,7 +74,6 @@
     "react-jazzicon": "^1.0.4",
     "react-virtuoso": "^4.7.1",
     "tinycolor2": "^1.6.0",
-    "typescript": "5.1.6",
     "use-debounce": "^10.0.0",
     "usehooks-ts": "^2.9.2",
     "viem": "^1.21.4",
@@ -96,10 +93,13 @@
     "@sentry/types": "^7.89.0",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
+    "@types/echarts": "^4.9.19",
     "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.14.195",
+    "@types/node": "20.3.2",
     "@types/numeral": "^2.0.2",
     "@types/react": "18.2.34",
+    "@types/react-dom": "18.2.6",
     "@types/tinycolor2": "^1.4.6",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
@@ -120,6 +120,7 @@
     "stylelint": "^15.9.0",
     "stylelint-config-standard": "^33.0.0",
     "stylelint-prettier": "^3.0.0",
+    "typescript": "5.1.6",
     "vitest": "1.3.0",
     "vitest-mock-extended": "^1.3.1"
   },
