fix: avoid checking unauthorized address in test env

--- a/.env.test
+++ b/.env.test
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_APP_ENV=dev
+NEXT_PUBLIC_APP_ENV=test
 NEXT_PUBLIC_BALANCER_API_URL=https://api-v3.balancer.fi/graphql
 
 # NEXT_ETHEREUM_RPC_URL=https://eth-mainnet.g.alchemy.com/v2/<key>
