chore: Fix integration tests

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 NEXT_PUBLIC_APP_ENV=dev
 NEXT_PUBLIC_BALANCER_API_URL=https://api-v3.balancer.fi/graphql
 NEXT_PUBLIC_WALLET_CONNECT_ID=1b6b722470b504a53cf011e1e629a9eb
+
+PRIVATE_HYPERNATIVE_EMAIL=xxx
+PRIVATE_HYPERNATIVE_PASSWORD=xxx
+PRIVATE_INFURA_KEY=xxx
