--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,6 @@ PRIVATE_HYPERNATIVE_EMAIL=xxx
 PRIVATE_HYPERNATIVE_PASSWORD=xxx
 
 # Set your own infura key to run integration tests
-PRIVATE_INFURA_KEY=xxx
+NEXT_PRIVATE_INFURA_KEY=xxx
 
 
