chore: Update comments

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,11 @@ NEXT_PUBLIC_APP_ENV=dev
 NEXT_PUBLIC_BALANCER_API_URL=https://api-v3.balancer.fi/graphql
 NEXT_PUBLIC_WALLET_CONNECT_ID=1b6b722470b504a53cf011e1e629a9eb
 
+# For wallet checks (optional)
 PRIVATE_HYPERNATIVE_EMAIL=xxx
 PRIVATE_HYPERNATIVE_PASSWORD=xxx
+
+# For fiat currency conversions (optional)
 PRIVATE_CURRENCYAPI_KEY=xxx
 
 # Set your own infura key to run integration tests
