chore: Run graphql gen on build

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "repository": "balancer/frontend-v3",
   "private": true,
   "scripts": {
-    "dev": "PROTOCOL=bal next dev",
+    "dev": "PROTOCOL=bal pnpm gen:graphql:dev && next dev",
     "dev-beets": "PROTOCOL=beets next dev",
-    "build": "PROTOCOL=bal next build",
-    "build-beets": "PROTOCOL=beets next build",
+    "build": "PROTOCOL=bal pnpm gen:graphql:prod && next build",
+    "build-beets": "PROTOCOL=beets pnpm gen:graphql:prod && next build",
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix && pnpm run prettier:fix",
@@ -19,7 +19,8 @@
     "prettier:fix": "pnpm run prettier --write",
     "typecheck": "tsc --project tsconfig.json --noEmit",
     "prepare": "husky install",
-    "gen:graphql": "DOTENV_CONFIG_PATH=./.env.local graphql-codegen -r dotenv/config",
+    "gen:graphql:dev": "DOTENV_CONFIG_PATH=./.env.local graphql-codegen -r dotenv/config",
+    "gen:graphql:prod": "DOTENV_CONFIG_PATH=./.env graphql-codegen -r dotenv/config",
     "gen:theme-typings": "chakra-cli tokens ./lib/shared/services/chakra/theme.ts",
     "gen:wagmi": "pnpm wagmi generate",
     "test": "pnpm test:unit & pnpm run test:integration",
