watch graphql changes

--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "repository": "balancer/frontend-v3",
   "private": true,
   "scripts": {
-    "dev": "PROTOCOL=bal pnpm gen:graphql:dev && next dev",
-    "dev-beets": "PROTOCOL=beets next dev",
+    "dev": "concurrently \"pnpm gen:graphql:dev --watch\" \"next dev\"",
+    "dev-bal": "PROTOCOL=bal pnpm dev",
+    "dev-beets": "PROTOCOL=beets pnpm dev",
     "build": "PROTOCOL=bal pnpm gen:graphql:prod && next build",
     "build-beets": "PROTOCOL=beets pnpm gen:graphql:prod && next build",
     "start": "next start",
@@ -109,6 +110,7 @@
     "@vitest/coverage-v8": "^1.3.0",
     "@wagmi/cli": "^2.1.4",
     "autoprefixer": "^10.4.14",
+    "concurrently": "^8.2.2",
     "cross-fetch": "^4.0.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
