fix: Hop pluralization

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "next-usequerystate": "^1.9.2",
     "nextjs-toploader": "^1.6.4",
     "numeral": "^2.0.6",
+    "pluralize": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-feather": "^2.0.10",
@@ -100,6 +101,7 @@
     "@types/lodash": "^4.14.195",
     "@types/node": "20.3.2",
     "@types/numeral": "^2.0.2",
+    "@types/pluralize": "^0.0.33",
     "@types/react": "18.2.34",
     "@types/react-dom": "18.2.6",
     "@types/tinycolor2": "^1.4.6",
