add ng-apimock + mocks

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "repository": "balancer/frontend-v3",
   "private": true,
   "scripts": {
+    "next-dev": "next dev",
     "dev": "concurrently \"pnpm gen:graphql:dev --watch\" \"next dev\"",
     "dev-bal": "PROTOCOL=bal pnpm dev",
     "dev-beets": "PROTOCOL=beets pnpm dev",
@@ -94,6 +95,8 @@
     "@graphql-codegen/typescript-document-nodes": "^4.0.1",
     "@graphql-codegen/typescript-msw": "^1.1.6",
     "@graphql-typed-document-node/core": "^3.2.0",
+    "@ng-apimock/core": "^3.12.0",
+    "@ng-apimock/dev-interface": "^3.5.1",
     "@sentry/types": "^7.89.0",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^15.0.5",
@@ -117,6 +120,7 @@
     "cross-fetch": "^4.0.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "express": "^4.19.2",
     "happy-dom": "^12.10.3",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
